# sparsepolicytree

./: .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  README.Rmd  README.html  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml
R/: exhaustive_tree.R  extendr-wrappers.R  parallel_policy_tree.R  policy_tree_reexport.R
man/: exhaustive_tree.Rd  parallel_policy_tree.Rd  sparse_policy_tree.Rd
reference/: index.html  sparse_policy_tree.html
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs  node.rs  observation_bundle.rs
tests/: testthat.R
tests/testthat/: test-policytree_agreement.R  test-policytree_input_validation.R
